--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.github.sid</groupId>
-  <artifactId>executable-jar-with-maven-example</artifactId>
+  <artifactId>executable-jar</artifactId>
   <version>0.8.10-SNAPSHOT</version>
   <packaging>jar</packaging>
 
