--- a/service.yaml
+++ b/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: java-maven #The name of the Kubernetes Service to be created in the Kubernetes cluster
+  name: java-maven
 spec:
   selector:
-    app: java-maven 
-  type: LoadBalancer #Type of the Kubernetes Service
+    app: java-maven
+  type: LoadBalancer
   ports:
-  - protocol: TCP
-    port: 3000 #Service port
-    targetPort: 3000 #The port for the React.js application container
+    - protocol: TCP
+      port: 3000
+      targetPort: 3000
